--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline --progress",
-    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js  --mode development --hot --inline --progress",
-    "pro": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --mode=production --hot --inline --progress",
+    "start": "set NODE_ENV=development && node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline --progress",
     "dev-help": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --help",
     "lint": "eslint --color --ext .js,.vue src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf dist && set NODE_ENV=production &&webpack --color"
   },
   "author": "fangbao",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.27.3",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.0",
+    "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-import": "^2.2.0",
@@ -26,14 +29,14 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.14.0",
     "vue-loader": "^11.3.4",
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.2.6",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.2",
-    "yargs": "^7.0.2"
+    "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
     "vue": "^2.2.6",
