--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss-loader": "^1.3.3",
     "rimraf": "^2.6.1",
@@ -45,6 +46,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "mint-ui": "^2.2.4",
     "vue": "^2.2.6",
     "vue-router": "^2.4.0"
   }
