--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "axios": "^0.16.1",
     "jquery": "^3.2.1",
     "mint-ui": "^2.2.4",
+    "swiper": "^3.4.2",
     "vue": "^2.2.6",
-    "vue-router": "^2.4.0"
+    "vue-router": "^2.4.0",
+    "vuex": "^2.3.1"
   }
 }
