--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "jquery": "^3.2.1",
+    "js-cookie": "^2.1.4",
     "mint-ui": "^2.2.4",
     "swiper": "^3.4.2",
     "vue": "^2.2.6",
