--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "swiper": "^3.4.2",
     "vue": "^2.2.6",
     "vue-router": "^2.4.0",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "xxtea": "^0.2.0"
   }
 }
