--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "iscroll": "^5.2.0",
     "jquery": "^3.2.1",
     "jquery-lazyload": "^1.9.7",
     "js-cookie": "^2.1.4",
