--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.27.3",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.0",
@@ -56,5 +58,10 @@
     "vue-router": "^2.4.0",
     "vuex": "^2.3.1",
     "xxtea": "^0.2.0"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
