--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
   "presets": [
     "es2015",
-    "stage-2"
+    "stage-0"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": ["transform-runtime", "transform-decorators-legacy", "syntax-async-functions"],
   "comments": false
 }
