--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^6.4.1",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-do-expressions": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -56,8 +57,9 @@
     "mint-ui": "^2.2.4",
     "swiper": "^3.4.2",
     "vue": "^2.2.6",
+    "vue-resource": "^1.3.1",
     "vue-router": "^2.4.0",
-    "vuex": "^2.3.0",
+    "vuex": "^2.3.1",
     "xxtea": "^0.2.0"
   },
   "browserslist": [
