--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "iscroll": "^5.2.0",
     "jquery": "^3.1.1",
     "jquery-lazyload": "^1.9.7",
     "js-cookie": "^2.1.4",
