--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "css-loader": "^0.27.3",
     "eslint": "^3.19.0",
@@ -52,7 +51,6 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "iscroll": "^5.2.0",
     "jquery": "^3.1.1",
     "jquery-lazyload": "^1.9.7",
     "js-cookie": "^2.1.4",
@@ -61,8 +59,7 @@
     "vue": "^2.2.6",
     "vue-resource": "^1.3.1",
     "vue-router": "^2.4.0",
-    "vuex": "^2.3.1",
-    "xxtea": "^0.2.0"
+    "vuex": "^2.3.1"
   },
   "browserslist": [
     "> 1%",
