--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "css-loader": "^0.27.3",
+    "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.0",
     "eslint-friendly-formatter": "^2.0.7",
@@ -38,7 +39,10 @@
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "postcss-inline-svg": "^3.0.0",
     "postcss-loader": "^1.3.3",
+    "postcss-svgo": "^2.1.6",
+    "postcss-write-svg": "^3.0.1",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.14.0",
